packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_cocoa_powder_20_fat.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Valrhona

Energy               7.03 pp  (Simple vs Valrhona)
TotalFats            1.03 pp  (Simple vs Valrhona)
CacaoSolids          4.12 pp  (Simple vs Valrhona)
CocoaButter          1.03 pp  (Simple vs Valrhona)
CocoaSolids          5.15 pp  (Simple vs Valrhona)
MilkFat              0.00 pp  (Simple vs Valrhona)
MilkSolids           0.00 pp  (Simple vs Valrhona)
MSNF                 0.00 pp  (Simple vs Valrhona)
MilkSNFS             0.00 pp  (Simple vs Valrhona)
MilkProteins         0.00 pp  (Simple vs Valrhona)
Lactose              0.00 pp  (Simple vs Valrhona)
TotalFiber           1.95 pp  (Simple vs Valrhona)
TotalSugars          0.00 pp  (Simple vs Valrhona)
TotalCarbohydrates   4.81 pp  (Simple vs Valrhona)
OtherSNFS            4.12 pp  (Simple vs Valrhona)
TotalSNFS            1.03 pp  (Simple vs Valrhona)
TotalProteins        1.21 pp  (Simple vs Valrhona)
TotalSolids          0.00 pp  (Simple vs Valrhona)
Water                0.00 pp  (Simple vs Valrhona)
POD                  0.00 pp  (Simple vs Valrhona)
PACsgr               0.00 pp  (Simple vs Valrhona)
PACmlk               0.00 pp  (Simple vs Valrhona)
HF                   8.35 pp  (Simple vs Valrhona)
TotalPAC             0.00 pp  (Simple vs Valrhona)
SaturatedFat         0.62 pp  (Simple vs Valrhona)
TransFat             0.00 pp  (Simple vs Valrhona)
