packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_cocoa_powder_22_24_fat.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Corvitto, Callebaut Plein Arome, Callebaut Extra Brute, USDA

Energy              11.66 pp  (Simple vs Corvitto)
TotalFats            1.71 pp  (Simple vs Corvitto)
CacaoSolids          0.00 pp  (Simple vs Corvitto)
CocoaButter          1.71 pp  (Simple vs Corvitto)
CocoaSolids          1.71 pp  (Simple vs Corvitto)
MilkFat              0.00 pp  (Simple vs Corvitto)
MilkSolids           0.00 pp  (Simple vs Corvitto)
MSNF                 0.00 pp  (Simple vs Corvitto)
MilkSNFS             0.00 pp  (Simple vs Corvitto)
MilkProteins         0.00 pp  (Simple vs Corvitto)
Lactose              0.00 pp  (Simple vs Corvitto)
TotalFiber           0.65 pp  (Simple vs Corvitto)
TotalSugars          0.00 pp  (Simple vs Corvitto)
TotalCarbohydrates   1.18 pp  (Simple vs Corvitto)
OtherSNFS            0.00 pp  (Simple vs Corvitto)
TotalSNFS            1.71 pp  (Simple vs Corvitto)
TotalProteins        0.40 pp  (Simple vs Corvitto)
TotalSolids          3.00 pp  (Simple vs Corvitto)
Water                3.00 pp  (Simple vs Corvitto)
POD                  0.00 pp  (Simple vs Corvitto)
PACsgr               0.00 pp  (Simple vs Corvitto)
PACmlk               0.00 pp  (Simple vs Corvitto)
HF                   1.54 pp  (Simple vs Corvitto)
TotalPAC             0.00 pp  (Simple vs Corvitto)
SaturatedFat         1.03 pp  (Simple vs Corvitto)
TransFat             0.00 pp  (Simple vs Corvitto)

Energy               4.34 pp  (Simple vs Callebaut Plein Arome)
TotalFats            0.12 pp  (Simple vs Callebaut Plein Arome)
CacaoSolids          0.00 pp  (Simple vs Callebaut Plein Arome)
CocoaButter          0.12 pp  (Simple vs Callebaut Plein Arome)
CocoaSolids          0.12 pp  (Simple vs Callebaut Plein Arome)
MilkFat              0.00 pp  (Simple vs Callebaut Plein Arome)
MilkSolids           0.00 pp  (Simple vs Callebaut Plein Arome)
MSNF                 0.00 pp  (Simple vs Callebaut Plein Arome)
MilkSNFS             0.00 pp  (Simple vs Callebaut Plein Arome)
MilkProteins         0.00 pp  (Simple vs Callebaut Plein Arome)
Lactose              0.00 pp  (Simple vs Callebaut Plein Arome)
TotalFiber           0.05 pp  (Simple vs Callebaut Plein Arome)
TotalSugars          0.00 pp  (Simple vs Callebaut Plein Arome)
TotalCarbohydrates   1.38 pp  (Simple vs Callebaut Plein Arome)
OtherSNFS            0.00 pp  (Simple vs Callebaut Plein Arome)
TotalSNFS            0.12 pp  (Simple vs Callebaut Plein Arome)
TotalProteins        0.03 pp  (Simple vs Callebaut Plein Arome)
TotalSolids          0.50 pp  (Simple vs Callebaut Plein Arome)
Water                0.50 pp  (Simple vs Callebaut Plein Arome)
POD                  0.00 pp  (Simple vs Callebaut Plein Arome)
PACsgr               0.00 pp  (Simple vs Callebaut Plein Arome)
PACmlk               0.00 pp  (Simple vs Callebaut Plein Arome)
HF                   0.11 pp  (Simple vs Callebaut Plein Arome)
TotalPAC             0.00 pp  (Simple vs Callebaut Plein Arome)
SaturatedFat         0.07 pp  (Simple vs Callebaut Plein Arome)
TransFat             0.00 pp  (Simple vs Callebaut Plein Arome)

Energy               4.34 pp  (Simple vs Callebaut Extra Brute)
TotalFats            0.12 pp  (Simple vs Callebaut Extra Brute)
CacaoSolids          0.00 pp  (Simple vs Callebaut Extra Brute)
CocoaButter          0.12 pp  (Simple vs Callebaut Extra Brute)
CocoaSolids          0.12 pp  (Simple vs Callebaut Extra Brute)
MilkFat              0.00 pp  (Simple vs Callebaut Extra Brute)
MilkSolids           0.00 pp  (Simple vs Callebaut Extra Brute)
MSNF                 0.00 pp  (Simple vs Callebaut Extra Brute)
MilkSNFS             0.00 pp  (Simple vs Callebaut Extra Brute)
MilkProteins         0.00 pp  (Simple vs Callebaut Extra Brute)
Lactose              0.00 pp  (Simple vs Callebaut Extra Brute)
TotalFiber           0.05 pp  (Simple vs Callebaut Extra Brute)
TotalSugars          0.00 pp  (Simple vs Callebaut Extra Brute)
TotalCarbohydrates   1.38 pp  (Simple vs Callebaut Extra Brute)
OtherSNFS            0.00 pp  (Simple vs Callebaut Extra Brute)
TotalSNFS            0.12 pp  (Simple vs Callebaut Extra Brute)
TotalProteins        0.03 pp  (Simple vs Callebaut Extra Brute)
TotalSolids          0.50 pp  (Simple vs Callebaut Extra Brute)
Water                0.50 pp  (Simple vs Callebaut Extra Brute)
POD                  0.00 pp  (Simple vs Callebaut Extra Brute)
PACsgr               0.00 pp  (Simple vs Callebaut Extra Brute)
PACmlk               0.00 pp  (Simple vs Callebaut Extra Brute)
HF                   0.11 pp  (Simple vs Callebaut Extra Brute)
TotalPAC             0.00 pp  (Simple vs Callebaut Extra Brute)
SaturatedFat         0.07 pp  (Simple vs Callebaut Extra Brute)
TransFat             0.00 pp  (Simple vs Callebaut Extra Brute)

Energy               0.22 pp  (Simple vs USDA)
TotalFats            0.72 pp  (Simple vs USDA)
CacaoSolids          0.00 pp  (Simple vs USDA)
CocoaButter          0.72 pp  (Simple vs USDA)
CocoaSolids          0.72 pp  (Simple vs USDA)
MilkFat              0.00 pp  (Simple vs USDA)
MilkSolids           0.00 pp  (Simple vs USDA)
MSNF                 0.00 pp  (Simple vs USDA)
MilkSNFS             0.00 pp  (Simple vs USDA)
MilkProteins         0.00 pp  (Simple vs USDA)
Lactose              0.00 pp  (Simple vs USDA)
TotalFiber           0.27 pp  (Simple vs USDA)
TotalSugars          0.00 pp  (Simple vs USDA)
TotalCarbohydrates   1.78 pp  (Simple vs USDA)
OtherSNFS            0.00 pp  (Simple vs USDA)
TotalSNFS            0.72 pp  (Simple vs USDA)
TotalProteins        0.17 pp  (Simple vs USDA)
TotalSolids          0.00 pp  (Simple vs USDA)
Water                0.00 pp  (Simple vs USDA)
POD                  0.00 pp  (Simple vs USDA)
PACsgr               0.00 pp  (Simple vs USDA)
PACmlk               0.00 pp  (Simple vs USDA)
HF                   0.65 pp  (Simple vs USDA)
TotalPAC             0.00 pp  (Simple vs USDA)
SaturatedFat         0.43 pp  (Simple vs USDA)
TransFat             0.00 pp  (Simple vs USDA)

Energy               7.32 pp  (Corvitto vs Callebaut Plein Arome)
TotalFats            1.83 pp  (Corvitto vs Callebaut Plein Arome)
CacaoSolids          0.00 pp  (Corvitto vs Callebaut Plein Arome)
CocoaButter          1.83 pp  (Corvitto vs Callebaut Plein Arome)
CocoaSolids          1.83 pp  (Corvitto vs Callebaut Plein Arome)
MilkFat              0.00 pp  (Corvitto vs Callebaut Plein Arome)
MilkSolids           0.00 pp  (Corvitto vs Callebaut Plein Arome)
MSNF                 0.00 pp  (Corvitto vs Callebaut Plein Arome)
MilkSNFS             0.00 pp  (Corvitto vs Callebaut Plein Arome)
MilkProteins         0.00 pp  (Corvitto vs Callebaut Plein Arome)
Lactose              0.00 pp  (Corvitto vs Callebaut Plein Arome)
TotalFiber           0.69 pp  (Corvitto vs Callebaut Plein Arome)
TotalSugars          0.00 pp  (Corvitto vs Callebaut Plein Arome)
TotalCarbohydrates   2.56 pp  (Corvitto vs Callebaut Plein Arome)
OtherSNFS            0.00 pp  (Corvitto vs Callebaut Plein Arome)
TotalSNFS            1.83 pp  (Corvitto vs Callebaut Plein Arome)
TotalProteins        0.43 pp  (Corvitto vs Callebaut Plein Arome)
TotalSolids          3.50 pp  (Corvitto vs Callebaut Plein Arome)
Water                3.50 pp  (Corvitto vs Callebaut Plein Arome)
POD                  0.00 pp  (Corvitto vs Callebaut Plein Arome)
PACsgr               0.00 pp  (Corvitto vs Callebaut Plein Arome)
PACmlk               0.00 pp  (Corvitto vs Callebaut Plein Arome)
HF                   1.65 pp  (Corvitto vs Callebaut Plein Arome)
TotalPAC             0.00 pp  (Corvitto vs Callebaut Plein Arome)
SaturatedFat         1.10 pp  (Corvitto vs Callebaut Plein Arome)
TransFat             0.00 pp  (Corvitto vs Callebaut Plein Arome)

Energy               7.32 pp  (Corvitto vs Callebaut Extra Brute)
TotalFats            1.83 pp  (Corvitto vs Callebaut Extra Brute)
CacaoSolids          0.00 pp  (Corvitto vs Callebaut Extra Brute)
CocoaButter          1.83 pp  (Corvitto vs Callebaut Extra Brute)
CocoaSolids          1.83 pp  (Corvitto vs Callebaut Extra Brute)
MilkFat              0.00 pp  (Corvitto vs Callebaut Extra Brute)
MilkSolids           0.00 pp  (Corvitto vs Callebaut Extra Brute)
MSNF                 0.00 pp  (Corvitto vs Callebaut Extra Brute)
MilkSNFS             0.00 pp  (Corvitto vs Callebaut Extra Brute)
MilkProteins         0.00 pp  (Corvitto vs Callebaut Extra Brute)
Lactose              0.00 pp  (Corvitto vs Callebaut Extra Brute)
TotalFiber           0.69 pp  (Corvitto vs Callebaut Extra Brute)
TotalSugars          0.00 pp  (Corvitto vs Callebaut Extra Brute)
TotalCarbohydrates   2.56 pp  (Corvitto vs Callebaut Extra Brute)
OtherSNFS            0.00 pp  (Corvitto vs Callebaut Extra Brute)
TotalSNFS            1.83 pp  (Corvitto vs Callebaut Extra Brute)
TotalProteins        0.43 pp  (Corvitto vs Callebaut Extra Brute)
TotalSolids          3.50 pp  (Corvitto vs Callebaut Extra Brute)
Water                3.50 pp  (Corvitto vs Callebaut Extra Brute)
POD                  0.00 pp  (Corvitto vs Callebaut Extra Brute)
PACsgr               0.00 pp  (Corvitto vs Callebaut Extra Brute)
PACmlk               0.00 pp  (Corvitto vs Callebaut Extra Brute)
HF                   1.65 pp  (Corvitto vs Callebaut Extra Brute)
TotalPAC             0.00 pp  (Corvitto vs Callebaut Extra Brute)
SaturatedFat         1.10 pp  (Corvitto vs Callebaut Extra Brute)
TransFat             0.00 pp  (Corvitto vs Callebaut Extra Brute)

Energy              11.44 pp  (Corvitto vs USDA)
TotalFats            2.43 pp  (Corvitto vs USDA)
CacaoSolids          0.00 pp  (Corvitto vs USDA)
CocoaButter          2.43 pp  (Corvitto vs USDA)
CocoaSolids          2.43 pp  (Corvitto vs USDA)
MilkFat              0.00 pp  (Corvitto vs USDA)
MilkSolids           0.00 pp  (Corvitto vs USDA)
MSNF                 0.00 pp  (Corvitto vs USDA)
MilkSNFS             0.00 pp  (Corvitto vs USDA)
MilkProteins         0.00 pp  (Corvitto vs USDA)
Lactose              0.00 pp  (Corvitto vs USDA)
TotalFiber           0.92 pp  (Corvitto vs USDA)
TotalSugars          0.00 pp  (Corvitto vs USDA)
TotalCarbohydrates   2.96 pp  (Corvitto vs USDA)
OtherSNFS            0.00 pp  (Corvitto vs USDA)
TotalSNFS            2.43 pp  (Corvitto vs USDA)
TotalProteins        0.57 pp  (Corvitto vs USDA)
TotalSolids          3.00 pp  (Corvitto vs USDA)
Water                3.00 pp  (Corvitto vs USDA)
POD                  0.00 pp  (Corvitto vs USDA)
PACsgr               0.00 pp  (Corvitto vs USDA)
PACmlk               0.00 pp  (Corvitto vs USDA)
HF                   2.19 pp  (Corvitto vs USDA)
TotalPAC             0.00 pp  (Corvitto vs USDA)
SaturatedFat         1.46 pp  (Corvitto vs USDA)
TransFat             0.00 pp  (Corvitto vs USDA)

Energy               0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TotalFats            0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
CacaoSolids          0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
CocoaButter          0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
CocoaSolids          0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
MilkFat              0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
MilkSolids           0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
MSNF                 0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
MilkSNFS             0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
MilkProteins         0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
Lactose              0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TotalFiber           0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TotalSugars          0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TotalCarbohydrates   0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
OtherSNFS            0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TotalSNFS            0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TotalProteins        0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TotalSolids          0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
Water                0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
POD                  0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
PACsgr               0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
PACmlk               0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
HF                   0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TotalPAC             0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
SaturatedFat         0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)
TransFat             0.00 pp  (Callebaut Plein Arome vs Callebaut Extra Brute)

Energy               4.12 pp  (Callebaut Plein Arome vs USDA)
TotalFats            0.60 pp  (Callebaut Plein Arome vs USDA)
CacaoSolids          0.00 pp  (Callebaut Plein Arome vs USDA)
CocoaButter          0.60 pp  (Callebaut Plein Arome vs USDA)
CocoaSolids          0.60 pp  (Callebaut Plein Arome vs USDA)
MilkFat              0.00 pp  (Callebaut Plein Arome vs USDA)
MilkSolids           0.00 pp  (Callebaut Plein Arome vs USDA)
MSNF                 0.00 pp  (Callebaut Plein Arome vs USDA)
MilkSNFS             0.00 pp  (Callebaut Plein Arome vs USDA)
MilkProteins         0.00 pp  (Callebaut Plein Arome vs USDA)
Lactose              0.00 pp  (Callebaut Plein Arome vs USDA)
TotalFiber           0.23 pp  (Callebaut Plein Arome vs USDA)
TotalSugars          0.00 pp  (Callebaut Plein Arome vs USDA)
TotalCarbohydrates   0.40 pp  (Callebaut Plein Arome vs USDA)
OtherSNFS            0.00 pp  (Callebaut Plein Arome vs USDA)
TotalSNFS            0.60 pp  (Callebaut Plein Arome vs USDA)
TotalProteins        0.14 pp  (Callebaut Plein Arome vs USDA)
TotalSolids          0.50 pp  (Callebaut Plein Arome vs USDA)
Water                0.50 pp  (Callebaut Plein Arome vs USDA)
POD                  0.00 pp  (Callebaut Plein Arome vs USDA)
PACsgr               0.00 pp  (Callebaut Plein Arome vs USDA)
PACmlk               0.00 pp  (Callebaut Plein Arome vs USDA)
HF                   0.54 pp  (Callebaut Plein Arome vs USDA)
TotalPAC             0.00 pp  (Callebaut Plein Arome vs USDA)
SaturatedFat         0.36 pp  (Callebaut Plein Arome vs USDA)
TransFat             0.00 pp  (Callebaut Plein Arome vs USDA)

Energy               4.12 pp  (Callebaut Extra Brute vs USDA)
TotalFats            0.60 pp  (Callebaut Extra Brute vs USDA)
CacaoSolids          0.00 pp  (Callebaut Extra Brute vs USDA)
CocoaButter          0.60 pp  (Callebaut Extra Brute vs USDA)
CocoaSolids          0.60 pp  (Callebaut Extra Brute vs USDA)
MilkFat              0.00 pp  (Callebaut Extra Brute vs USDA)
MilkSolids           0.00 pp  (Callebaut Extra Brute vs USDA)
MSNF                 0.00 pp  (Callebaut Extra Brute vs USDA)
MilkSNFS             0.00 pp  (Callebaut Extra Brute vs USDA)
MilkProteins         0.00 pp  (Callebaut Extra Brute vs USDA)
Lactose              0.00 pp  (Callebaut Extra Brute vs USDA)
TotalFiber           0.23 pp  (Callebaut Extra Brute vs USDA)
TotalSugars          0.00 pp  (Callebaut Extra Brute vs USDA)
TotalCarbohydrates   0.40 pp  (Callebaut Extra Brute vs USDA)
OtherSNFS            0.00 pp  (Callebaut Extra Brute vs USDA)
TotalSNFS            0.60 pp  (Callebaut Extra Brute vs USDA)
TotalProteins        0.14 pp  (Callebaut Extra Brute vs USDA)
TotalSolids          0.50 pp  (Callebaut Extra Brute vs USDA)
Water                0.50 pp  (Callebaut Extra Brute vs USDA)
POD                  0.00 pp  (Callebaut Extra Brute vs USDA)
PACsgr               0.00 pp  (Callebaut Extra Brute vs USDA)
PACmlk               0.00 pp  (Callebaut Extra Brute vs USDA)
HF                   0.54 pp  (Callebaut Extra Brute vs USDA)
TotalPAC             0.00 pp  (Callebaut Extra Brute vs USDA)
SaturatedFat         0.36 pp  (Callebaut Extra Brute vs USDA)
TransFat             0.00 pp  (Callebaut Extra Brute vs USDA)
