packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_cocoa_powder_24_fat.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, USDA

Energy               7.25 pp  (Simple vs USDA)
TotalFats            0.31 pp  (Simple vs USDA)
CacaoSolids          0.00 pp  (Simple vs USDA)
CocoaButter          0.31 pp  (Simple vs USDA)
CocoaSolids          0.31 pp  (Simple vs USDA)
MilkFat              0.00 pp  (Simple vs USDA)
MilkSolids           0.00 pp  (Simple vs USDA)
MSNF                 0.00 pp  (Simple vs USDA)
MilkSNFS             0.00 pp  (Simple vs USDA)
MilkProteins         0.00 pp  (Simple vs USDA)
Lactose              0.00 pp  (Simple vs USDA)
TotalFiber           0.12 pp  (Simple vs USDA)
TotalSugars          0.00 pp  (Simple vs USDA)
TotalCarbohydrates   1.07 pp  (Simple vs USDA)
OtherSNFS            0.00 pp  (Simple vs USDA)
TotalSNFS            0.31 pp  (Simple vs USDA)
TotalProteins        0.07 pp  (Simple vs USDA)
TotalSolids          0.00 pp  (Simple vs USDA)
Water                0.00 pp  (Simple vs USDA)
POD                  0.00 pp  (Simple vs USDA)
PACsgr               0.00 pp  (Simple vs USDA)
PACmlk               0.00 pp  (Simple vs USDA)
HF                   0.28 pp  (Simple vs USDA)
TotalPAC             0.00 pp  (Simple vs USDA)
SaturatedFat         0.19 pp  (Simple vs USDA)
TransFat             0.00 pp  (Simple vs USDA)
