packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_milk_chocolate_40.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Corvitto, Callebaut Power 41, Callebaut Arriba

Energy              31.31 pp  (Corvitto vs Callebaut Power 41)
TotalFats            3.60 pp  (Corvitto vs Callebaut Power 41)
CacaoSolids          2.20 pp  (Corvitto vs Callebaut Power 41)
CocoaButter          2.70 pp  (Corvitto vs Callebaut Power 41)
CocoaSolids          4.90 pp  (Corvitto vs Callebaut Power 41)
MilkFat              0.90 pp  (Corvitto vs Callebaut Power 41)
MilkSolids           4.60 pp  (Corvitto vs Callebaut Power 41)
MSNF                 3.70 pp  (Corvitto vs Callebaut Power 41)
MilkSNFS             1.68 pp  (Corvitto vs Callebaut Power 41)
MilkProteins         1.39 pp  (Corvitto vs Callebaut Power 41)
Lactose              2.02 pp  (Corvitto vs Callebaut Power 41)
TotalFiber           1.85 pp  (Corvitto vs Callebaut Power 41)
TotalSugars          1.02 pp  (Corvitto vs Callebaut Power 41)
TotalCarbohydrates   2.36 pp  (Corvitto vs Callebaut Power 41)
OtherSNFS            1.40 pp  (Corvitto vs Callebaut Power 41)
TotalSNFS            4.62 pp  (Corvitto vs Callebaut Power 41)
TotalProteins        0.24 pp  (Corvitto vs Callebaut Power 41)
TotalSolids          0.00 pp  (Corvitto vs Callebaut Power 41)
Water                0.00 pp  (Corvitto vs Callebaut Power 41)
POD                  0.68 pp  (Corvitto vs Callebaut Power 41)
PACsgr               1.02 pp  (Corvitto vs Callebaut Power 41)
PACmlk               1.36 pp  (Corvitto vs Callebaut Power 41)
HF                   6.39 pp  (Corvitto vs Callebaut Power 41)
TotalPAC             2.38 pp  (Corvitto vs Callebaut Power 41)
SaturatedFat         2.21 pp  (Corvitto vs Callebaut Power 41)
TransFat             0.03 pp  (Corvitto vs Callebaut Power 41)

Energy              11.50 pp  (Corvitto vs Callebaut Arriba)
TotalFats            0.90 pp  (Corvitto vs Callebaut Arriba)
CacaoSolids          0.50 pp  (Corvitto vs Callebaut Arriba)
CocoaButter          1.10 pp  (Corvitto vs Callebaut Arriba)
CocoaSolids          1.60 pp  (Corvitto vs Callebaut Arriba)
MilkFat              0.20 pp  (Corvitto vs Callebaut Arriba)
MilkSolids           0.50 pp  (Corvitto vs Callebaut Arriba)
MSNF                 0.30 pp  (Corvitto vs Callebaut Arriba)
MilkSNFS             0.14 pp  (Corvitto vs Callebaut Arriba)
MilkProteins         0.11 pp  (Corvitto vs Callebaut Arriba)
Lactose              0.16 pp  (Corvitto vs Callebaut Arriba)
TotalFiber           0.60 pp  (Corvitto vs Callebaut Arriba)
TotalSugars          1.84 pp  (Corvitto vs Callebaut Arriba)
TotalCarbohydrates   0.73 pp  (Corvitto vs Callebaut Arriba)
OtherSNFS            1.00 pp  (Corvitto vs Callebaut Arriba)
TotalSNFS            2.74 pp  (Corvitto vs Callebaut Arriba)
TotalProteins        0.49 pp  (Corvitto vs Callebaut Arriba)
TotalSolids          0.00 pp  (Corvitto vs Callebaut Arriba)
Water                0.00 pp  (Corvitto vs Callebaut Arriba)
POD                  1.97 pp  (Corvitto vs Callebaut Arriba)
PACsgr               1.84 pp  (Corvitto vs Callebaut Arriba)
PACmlk               0.11 pp  (Corvitto vs Callebaut Arriba)
HF                   1.89 pp  (Corvitto vs Callebaut Arriba)
TotalPAC             1.73 pp  (Corvitto vs Callebaut Arriba)
SaturatedFat         0.53 pp  (Corvitto vs Callebaut Arriba)
TransFat             0.01 pp  (Corvitto vs Callebaut Arriba)

Energy              19.81 pp  (Callebaut Power 41 vs Callebaut Arriba)
TotalFats            2.70 pp  (Callebaut Power 41 vs Callebaut Arriba)
CacaoSolids          1.70 pp  (Callebaut Power 41 vs Callebaut Arriba)
CocoaButter          1.60 pp  (Callebaut Power 41 vs Callebaut Arriba)
CocoaSolids          3.30 pp  (Callebaut Power 41 vs Callebaut Arriba)
MilkFat              1.10 pp  (Callebaut Power 41 vs Callebaut Arriba)
MilkSolids           5.10 pp  (Callebaut Power 41 vs Callebaut Arriba)
MSNF                 4.00 pp  (Callebaut Power 41 vs Callebaut Arriba)
MilkSNFS             1.82 pp  (Callebaut Power 41 vs Callebaut Arriba)
MilkProteins         1.50 pp  (Callebaut Power 41 vs Callebaut Arriba)
Lactose              2.18 pp  (Callebaut Power 41 vs Callebaut Arriba)
TotalFiber           1.25 pp  (Callebaut Power 41 vs Callebaut Arriba)
TotalSugars          0.82 pp  (Callebaut Power 41 vs Callebaut Arriba)
TotalCarbohydrates   3.09 pp  (Callebaut Power 41 vs Callebaut Arriba)
OtherSNFS            0.40 pp  (Callebaut Power 41 vs Callebaut Arriba)
TotalSNFS            1.88 pp  (Callebaut Power 41 vs Callebaut Arriba)
TotalProteins        0.72 pp  (Callebaut Power 41 vs Callebaut Arriba)
TotalSolids          0.00 pp  (Callebaut Power 41 vs Callebaut Arriba)
Water                0.00 pp  (Callebaut Power 41 vs Callebaut Arriba)
POD                  2.65 pp  (Callebaut Power 41 vs Callebaut Arriba)
PACsgr               0.82 pp  (Callebaut Power 41 vs Callebaut Arriba)
PACmlk               1.47 pp  (Callebaut Power 41 vs Callebaut Arriba)
HF                   4.50 pp  (Callebaut Power 41 vs Callebaut Arriba)
TotalPAC             0.65 pp  (Callebaut Power 41 vs Callebaut Arriba)
SaturatedFat         1.68 pp  (Callebaut Power 41 vs Callebaut Arriba)
TransFat             0.04 pp  (Callebaut Power 41 vs Callebaut Arriba)
