packages/sci-cream/src/tests/embedded/compare_specs/snapshots/sci_cream__tests__embedded__compare_specs__chocolate__compare_specs_milk_couverture_34.snap
---
source: packages/sci-cream/src/tests/embedded/compare_specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Callebaut 823, Callebaut 665

Energy               3.24 pp  (Callebaut 823 vs Callebaut 665)
TotalFats            0.50 pp  (Callebaut 823 vs Callebaut 665)
CacaoSolids          2.10 pp  (Callebaut 823 vs Callebaut 665)
CocoaButter          0.40 pp  (Callebaut 823 vs Callebaut 665)
CocoaSolids          1.70 pp  (Callebaut 823 vs Callebaut 665)
MilkFat              0.10 pp  (Callebaut 823 vs Callebaut 665)
MilkSolids           5.20 pp  (Callebaut 823 vs Callebaut 665)
MSNF                 5.30 pp  (Callebaut 823 vs Callebaut 665)
MilkSNFS             2.41 pp  (Callebaut 823 vs Callebaut 665)
MilkProteins         1.86 pp  (Callebaut 823 vs Callebaut 665)
Lactose              2.89 pp  (Callebaut 823 vs Callebaut 665)
TotalFiber           0.64 pp  (Callebaut 823 vs Callebaut 665)
TotalSugars          0.61 pp  (Callebaut 823 vs Callebaut 665)
TotalCarbohydrates   1.78 pp  (Callebaut 823 vs Callebaut 665)
OtherSNFS            0.40 pp  (Callebaut 823 vs Callebaut 665)
TotalSNFS            1.11 pp  (Callebaut 823 vs Callebaut 665)
TotalProteins        1.46 pp  (Callebaut 823 vs Callebaut 665)
TotalSolids          0.00 pp  (Callebaut 823 vs Callebaut 665)
Water                0.00 pp  (Callebaut 823 vs Callebaut 665)
POD                  3.04 pp  (Callebaut 823 vs Callebaut 665)
PACsgr               0.61 pp  (Callebaut 823 vs Callebaut 665)
PACmlk               1.95 pp  (Callebaut 823 vs Callebaut 665)
HF                   3.42 pp  (Callebaut 823 vs Callebaut 665)
TotalPAC             1.34 pp  (Callebaut 823 vs Callebaut 665)
SaturatedFat         0.30 pp  (Callebaut 823 vs Callebaut 665)
TransFat             0.00 pp  (Callebaut 823 vs Callebaut 665)
